<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
    <!--price calculator-->

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardUseCompatPadding="true"
        app:contentPadding="18dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/box_length"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/input_box_length"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/box_length_in_cm"
                        android:singleLine="true"
                        android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/box_breadth"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/input_box_breadth"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/box_breadth_in_cm"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/box_height"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/input_box_height"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/box_height_in_cm"
                        android:singleLine="true"
                        android:inputType="numberDecimal"/>
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>
            <!-- Weight-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/box_weight"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/input_box_weight"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/box_weight_in_kg"
                    android:singleLine="true"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <TextView
                    android:id="@+id/lowcostPriceTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="low cost"
                    android:textColor="@color/green"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/priorityPriceTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Priority"
                    android:textColor="@color/orange"
                    android:layout_weight="1"/>
                <TextView
                    android:id="@+id/expressPriceTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Express"
                    android:textColor="@color/light_blue"
                    android:layout_weight="1"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_calculate"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:padding="2dp"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:text="@string/Calculate_price"
                android:textColor="@color/darkTab"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>