<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    android:paddingTop="150dp"
    android:textColor="@color/darkTab">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:clickable="false"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardElevation="15dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <!-- address -->
            <!-- street 1-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/address_street1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/darkTab">

                <EditText
                    android:id="@+id/input_address_street1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/address_street1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!--Street 2-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/address_street2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/darkTab">

                <EditText
                    android:id="@+id/input_address_street2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/address_street2"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <!--Landmark-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/address_landmark"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/darkTab">

                <EditText
                    android:id="@+id/input_address_landmark"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/address_landmark"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="3">
                <!--city -->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/address_city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/darkTab"
                    app:counterMaxLength="20">

                    <EditText
                        android:id="@+id/input_address_city"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/address_city"
                        android:maxLength="15"
                        android:scrollHorizontally="false"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
                <!--state -->
                <Spinner
                    android:id="@+id/state_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:paddingLeft="5dp"
                    android:paddingTop="25dp" />

                <!-- pin code-->
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/address_pin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:paddingLeft="5dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/darkTab"
                    app:counterMaxLength="6">

                    <EditText
                        android:id="@+id/input_address_pin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/address_pin"
                        android:inputType="number"
                        android:maxLength="6" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_new_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_send" />

    <include layout="@layout/progress_bar" />
</LinearLayout>

