<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_shipment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsable_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/AppTheme.CollapsibleAppBar"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="32dp"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleTextAppearance="@style/AppTheme.ExpandedAppBar"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/imageView_box_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/shipment_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <!--create shipment form-->
    <android.support.v4.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <!--calendar date time selector-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardUseCompatPadding="true"
                app:contentPadding="8dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true">

                    <ImageView
                        android:id="@+id/ivClock"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:src="@android:drawable/ic_menu_my_calendar" />

                    <EditText
                        android:id="@+id/input_time"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginStart="@dimen/activity_horizontal_margin"
                        android:layout_toEndOf="@id/ivClock"
                        android:layout_toRightOf="@id/ivClock"
                        android:clickable="true"
                        android:editable="false"
                        android:hint="@string/enter_time"
                        android:inputType="datetime"
                        android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
            <!-- new address fields-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardUseCompatPadding="true"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <!-- receiver name-->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true">

                        <ImageView
                            android:id="@+id/ivUserIcon"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_profile" />

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/receiver_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_toEndOf="@id/ivUserIcon"
                            android:layout_toRightOf="@id/ivUserIcon"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/darkTab">

                            <EditText
                                android:id="@+id/input_receiver_name"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/hint_name"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>
                    </RelativeLayout>

                    <!-- address -->
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true">

                        <ImageView
                            android:id="@+id/ivlocationIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_location_on_black_24dp" />

                        <!-- street 1-->
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/address_street1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
                            android:layout_marginStart="@dimen/activity_horizontal_margin"
                            android:layout_toEndOf="@id/ivlocationIcon"
                            android:layout_toRightOf="@id/ivlocationIcon"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/darkTab">

                            <EditText
                                android:id="@+id/input_address_street1"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/address_street1"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <!--Street 2-->
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/address_street2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignLeft="@+id/address_street1"
                            android:layout_alignStart="@+id/address_street1"
                            android:layout_below="@+id/address_street1"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/darkTab">

                            <EditText
                                android:id="@+id/input_address_street2"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/address_street2"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <!--Landmark-->
                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/address_landmark"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignLeft="@+id/address_street2"
                            android:layout_alignStart="@+id/address_street2"
                            android:layout_below="@+id/address_street2"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="@color/darkTab">

                            <EditText
                                android:id="@+id/input_address_landmark"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:hint="@string/address_landmark"
                                android:singleLine="true" />
                        </android.support.design.widget.TextInputLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="match_parent"
                            android:layout_alignLeft="@+id/address_landmark"
                            android:layout_alignStart="@+id/address_landmark"
                            android:layout_below="@+id/address_landmark"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal"
                            android:weightSum="3">
                            <!--city -->
                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/address_city"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.5"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/darkTab"
                                app:counterMaxLength="20">

                                <EditText
                                    android:id="@+id/input_address_city"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="@string/address_city"
                                    android:maxLength="15" />
                            </android.support.design.widget.TextInputLayout>
                            <!--state -->
                            <Spinner
                                android:id="@+id/state_spinner"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="0.3"
                                android:paddingLeft="5dp"
                                android:paddingTop="25dp" />

                            <!-- pin code-->
                            <android.support.design.widget.TextInputLayout
                                android:id="@+id/address_pin"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1.2"
                                android:paddingLeft="5dp"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@color/darkTab"
                                app:counterMaxLength="6">

                                <EditText
                                    android:id="@+id/input_address_pin"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:hint="@string/address_pin"
                                    android:inputType="number"
                                    android:maxLength="6" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>
                    </RelativeLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--price calculator-->
            <TextView
                android:id="@+id/show_price_calculator"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="Calculate price"
                android:textColor="@color/red"
                android:textSize="16dip" />

            <fragment
                android:id="@+id/fragment_price_calculator"
                android:name="app.packman.fragment.PriceCalculatorFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <!--schedule pickup-->
            <Button
                android:id="@+id/btn_reg_schedule_pickup"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/green_flavor"
                android:layout_marginTop="10dp"
                android:text="@string/schedule_pickup"
                android:textColor="@android:color/white"/>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>
    <!--create shipment form end-->
    <!--fab button for camera-->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_new_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_anchor="@+id/appbar"
        app:layout_anchorGravity="bottom|right|end" />
</android.support.design.widget.CoordinatorLayout>
